k8s/root/deployment.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: root

spec:

  replicas: 2

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: root

  template:

    metadata:
      labels:
        app: root

    spec:

      restartPolicy: Always

      containers:

        - name: root

          image: REPLACE_IMAGE

          ports:
            - containerPort: 80


          securityContext:
            runAsNonRoot: true


          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10


          startupProbe:

            httpGet:
              path: /
              port: 80

            failureThreshold: 30
            periodSeconds: 10
