k8s/root/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: root

spec:

  selector:
    app: root

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
