k8s/root/network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: root-network-policy

spec:

  podSelector:
    matchLabels:
      app: root

  policyTypes:
    - Ingress
    - Egress
